# wallpaper-map-generator

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml
jupyters/: examples.ipynb  my_examples.ipynb
presets/: minimal_r.json
src/: Homepage.py  pyproject.toml
